syntax = "proto3";
package milkyway.liquidvesting.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/milkyway-labs/milkyway/v5/x/liquidvesting/types";

// Params defines the parameters for the module.
message Params {
  // List of fields that have been removed and should not be used.
  reserved 4;

  // This value represents the percentage that needs to be sent to the
  // insurance fund in order to restake a certain amount of locked tokens.
  // For example, if this value is 2%, a user must send 2 tokens to
  // the insurance fund to restake 100 locked tokens
  string insurance_percentage = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // This value represents the list of users who are authorized to execute the
  // MsgBurnLockedRepresentation.
  repeated string burners = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // This value represents the list of users who are authorized to execute the
  // MsgMintLockedRepresentation.
  repeated string minters = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // List of channels from which is allowed to receive deposits to the insurance
  // fund.
  repeated string allowed_channels = 5;
}
